--- a/views/showpokemon.mustache
+++ b/views/showpokemon.mustache
@@ -26,10 +26,45 @@
     </div>
 
     {{#pokemon}}
-    <form action="/home/catchpokemon/{{id}}" method="POST">
-      <a href="/home/pokemon/{{id}}">{{name}}</a> <button>Catch</button>
-    </form>
+
+    <div class="div_for_pokedex">
+
+      <div class="pokedex_left">
+        <div class="pokemon_id">{{pokeid}}</div>
+        <div class="display_image"></div>
+
+        <table class="catch_table">
+          <tr>
+        <td>
+          <form action="/home/catchpokemon/{{id}}" method="POST">
+            <button class="catch_button">Catch</button>
+          </form>
+        </td>
+        <td class="empty_td"></td>
+      </tr>
+      </table>
+
+        <div class="pokemon_name">{{name}}</div>
+      </div>
+
+      <div class="pokedex_right">
+        <div class="pokemon_description">{{desc}}</div>
+
+      <table class="pokemon_stats">
+        <tr>
+          <td class="pokemon_stat">HP: {{hp}}</td>
+          <td class="pokemon_stat">ATK: {{attack}}</td>
+          <td class="pokemon_stat">DEF: {{defense}}</td>
+        </tr>
+        <tr>
+          <td class="pokemon_stat"> SP: {{speed}}</td>
+          <td class="pokemon_stat">SP ATK: {{spattack}}</td>
+          <td class="pokemon_stat">SP DEF: {{spdefense}}</td>
+        </tr>
+      </table>
+
+    </div>
+
     {{/pokemon}}
-    
   </body>
 </html>
