--- a/public/styles.css
+++ b/public/styles.css
@@ -35,6 +35,7 @@
 .pokemon_div_container {
   background-color: lightblue;
   border: 1px solid black;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   margin: 1em 1em 0 1em;
@@ -44,6 +45,11 @@
 
 .pokemon_list {
   list-style-type: none;
+}
+
+.home_pokemon_image {
+  width: 50px;
+  height: 50px;
 }
 
 .left_side_bar {
@@ -71,7 +77,6 @@
 
 .pokedex_left {
   border: 2px solid black;
-  border-right: 2px solid black;
   border-radius: 20px;
   box-shadow: 0 0 1em .2em black;
   background-color: red;
@@ -82,9 +87,9 @@
 .pokedex_right {
   background-color: red;
   border: 2px solid black;
-  border-left: 2px solid #4D4D4D;
+  border-left: 5px solid #4D4D4D;
   border-radius: 20px;
-  box-shadow: 0 0 1em .2em gray;
+  box-shadow: 0 0 .1em .2em gray;
   height: 33em;
   width: 35%;
   bottom: 0;
@@ -93,9 +98,8 @@
 
 .pokemon_id {
   background-color: #289DE4;
-  border: 3px solid white;
+  border: 1.5px solid white;
   border-radius: 50px;
-  display: inline-block;
   font-size: 1.5em;
   margin-left: .8em;
   margin-top: .3em;
@@ -104,12 +108,18 @@
 }
 
 .display_image {
+  text-align: center;
   background-color:white;
   border: 4px solid #A2A2A2;
   box-shadow: 0 0 1em .3em #A2A2A2;
   margin: 3.6em auto 0 auto;
   width: 80%;
   height: 40%;
+}
+
+.pokemon_image {
+  width: 300px;
+  height: 280px;
 }
 
 .catch_table {
@@ -121,16 +131,19 @@
   background-color: #BB341E;
   border: 2.2px solid #850101;
   border-radius: 10px;
-  font-size: .9em;
   padding: 0 1em 0 1em;
 }
 
-.empty_td {
+.pokemon_button {
   background-color: #0F79D8;
-  border: 2px solid #031964;
+  border: 2.2px solid #031964;
   border-radius: 10px;
   padding: 0 1em 0 1em;
-  width: 1.9em;
+}
+
+.pokemon_json {
+  color: black;
+  text-decoration: none;
 }
 
 .pokemon_name {
@@ -139,8 +152,7 @@
   border: 1.8px solid #125806;
   display: inline-block;
   font-size: 1em;
-  margin-left: 1em;
-  margin-top: 5em;
+  margin: 5em 0 0 1em;
   padding: 1em 1.5em 1em 1.5em;
 }
 
@@ -157,6 +169,7 @@
 .pokemon_stats {
   background-color: #2772F5;
   border-collapse: collapse;
+  box-shadow: 0 0 .5em .2em #288FCD;
   margin: 3em auto 0 auto;
   width: 70%;
 }
