--- a/public/styles.css
+++ b/public/styles.css
@@ -1,21 +1,48 @@
+a {
+  color: black;
+  text-decoration: none;
+}
+
+body {
+  background-color: #EAEAEA;
+}
+
+
+/* Header */
+.header {
+  background-color: red;
+  border: 3px solid #700F0F;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto 0 auto;
+  padding-bottom: 1em;
+  width: 95%;
+  position: relative;
+}
+
 .website_title {
   font-family: 'Pokemon Hollow';
-  font-size: 5em;
+  font-size: 2em;
   list-style-type: none;
   margin: 0 auto 0 auto;
 }
 
-.navbar {
-  background-color: red;
-  display: flex;
-  flex-direction: row;
-  padding: 1.4em;
+.login_table {
+  position: absolute;
+  right: 0;
 }
 
-.ul_navbar {
-  display: flex;
-  flex-direction: column;
-  list-style-type: none;
+.login_li {
+  background-color: #E8E3E3;
+  border: 2px solid #AFAFAF;
+  border-radius: 5px;
+  padding: .2em;
+}
+
+.pokeball_img {
+  height: 3em;
+  width: 3em;
 }
 .username_span {
   font-family: 'Pokemon Solid';
@@ -24,18 +51,94 @@
 .username_display {
   list-style-type: none;
   position: absolute;
-  right: 15px;
+  right: 100px;
 }
 
+.navbar{
+  margin: .2em auto 0 auto;
+}
+
+.nav_elements {
+  background-color: #808080;
+  border: 1px solid #A2A2A2;
+  box-shadow: 0 0 .2em .1em #0C0A0A;
+  border-radius: 5px;
+  padding: .7em;
+}
+/* End Header */
+
+/* 3 Div Column Container */
 .contain_all {
+  background-color: white;
+  border-radius: 15px;
   display: flex;
   flex-direction: row;
+  margin: 2em auto 0 auto;
+  width: 90%;
 }
 
+/* Left Side Div */
+.left_side_bar {
+  background-color: #F4F4F4;
+  border: 2px solid black;
+  border-radius: 10px;
+  float: left;
+  list-style-type: none;
+  margin: 1em 0 0 1em;
+  width: 20%;
+}
+
+.attributes_ul {
+  list-style-type: none;
+}
+
+.grass_att {
+  background-color: #0C9C03;
+  border-radius: 9px;
+  margin-top: 1px;
+  padding: .6em;
+}
+
+.bug_att {
+  background-color: #A9B60E;
+  border-radius: 9px;
+  margin-top: 1px;
+  padding: .6em;
+}
+
+.fire_att {
+  background-color: #D85A11;
+  border-radius: 9px;
+  margin-top: 1px;
+  padding: .6em;
+}
+
+.flying_att {
+  background-color: #B5AAD7;
+  border-radius: 9px;
+  margin-top: 1px;
+  padding: .6em;
+}
+
+.normal_att {
+  background-color: #BDA883;
+  border-radius: 9px;
+  margin-top: 1px;
+  padding: .6em;
+}
+
+.electric_att {
+  background-color: #E3CC4E;
+  border-radius: 9px;
+  margin-top: 1px;
+  padding: .6em;
+}
+
+/* Center Div */
 .pokemon_div_container {
-  background-color: lightblue;
-  border: 1px solid black;
-  border-radius: 20px;
+  background-color: #53B9D5;
+  border: 2px solid black;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   margin: 1em 1em 0 1em;
@@ -47,20 +150,20 @@
   list-style-type: none;
 }
 
+.list_pokemon {
+  border: 2px solid #59A6D6;
+}
+
 .home_pokemon_image {
   width: 50px;
   height: 50px;
 }
 
-.left_side_bar {
-  border: 1px solid lightblue;
-  float: left;
-  margin: 1em 0 0 1em;
-  width: 20%;
-}
-
+/* Right Side Div */
 .right_side_bar {
-  border: 1px solid lightblue;
+  background-color: #F4F4F4;
+  border: 2px solid black;
+  border-radius: 10px;
   float: left;
   margin-top: 1em;
   width: 20%;
