--- a/views/createpokemon.mustache
+++ b/views/createpokemon.mustache
@@ -6,6 +6,36 @@
     <link rel="stylesheet" type="text/css" href="/public/styles.css">
   </head>
   <body>
+    <div class="header">
+      <table class="display_title">
+      <tr>
+          <td class="website_title">Pokebase</td>
+          <td><img class="pokeball_img" src="/public/pokeball.png"></td>
+      </tr>
+      <table class="login_table">
+        <tr>
+          <th colspan="3">
+            <span class="username_span">{{#username}}{{.}}{{/username}}</span>
+            {{#userId}}<a href="/home/{{.}}">Account</a>{{/userId}}
+          </th>
+        </tr>
+
+        <tr>
+          <td class="login_li"><a href="/home/registeruser">Register</a></td>
+          <td class="login_li"><a href="/home/userlogin">Login</a></td>
+          <td class="login_li"><a href="/home/userlogout">Logout</a></td>
+        </tr>
+      </table>
+
+      </table>
+
+    </div>
+
+    <table class="navbar">
+      <tr>
+        <td class="nav_elements"><a href="/home">Home</td>
+      </tr>
+    </table>
 
     <form class="edit_pokemon" action="/home/createpokemon" method="POST" enctype="multipart/form-data">
       <input type="file" name="pokemonimg">
