--- a/views/updatepokemon.mustache
+++ b/views/updatepokemon.mustache
@@ -6,23 +6,37 @@
     <link rel="stylesheet" type="text/css" href="/public/styles.css">
   </head>
   <body>
-    <div class="navbar">
-      <table>
-      <tr class="ul_navbar">
-        <td class="nav_li"><a href="/home/">Home</a></td>
-        <td class="nav_li"><a href="/home/registeruser">Register</a></td>
-        <td class="nav_li"><a href="/home/userlogin">Login</a></td>
-        <td class="nav_li"><a href="/home/userlogout">Logout</a></td>
+
+    <div class="header">
+      <table class="display_title">
+      <tr>
+          <td class="website_title">Pokebase</td>
+          <td><img class="pokeball_img" src="/public/pokeball.png"></td>
       </tr>
+      <table class="login_table">
+        <tr>
+          <th colspan="3">
+            <span class="username_span">{{#username}}{{.}}{{/username}}</span>
+            {{#userId}}<a href="/home/{{.}}">Account</a>{{/userId}}
+          </th>
+        </tr>
+
+        <tr>
+          <td class="login_li"><a href="/home/registeruser">Register</a></td>
+          <td class="login_li"><a href="/home/userlogin">Login</a></td>
+          <td class="login_li"><a href="/home/userlogout">Logout</a></td>
+        </tr>
       </table>
-      <li class="website_title">Pokebase</li>
-      <ul>
-        <li class="username_display"><span class="username_span">{{#username}}{{.}}{{/username}}</span></li>
-        {{#userId}}
-        <li><a href="/home/{{.}}">Account</a></li>
-        {{/userId}}
-      </ul>
+
+      </table>
+
     </div>
+
+    <table class="navbar">
+      <tr>
+        <td class="nav_elements"><a href="/home">Home</td>
+      </tr>
+    </table>
 
     {{#pokemon}}
     <form class="edit_pokemon" action="/home/pokemon/{{id}}/update?_method=PUT" method="POST" enctype="multipart/form-data">
