--- a/views/userlogin.mustache
+++ b/views/userlogin.mustache
@@ -7,19 +7,36 @@
   </head>
   <body>
 
-    <div class="navbar">
-      <table>
-      <tr class="ul_navbar">
-        <td class="nav_li"><a href="/home">Home</a></td>
-        <td class="nav_li"><a href="/home/registeruser">Register</a></td>
+    <div class="header">
+      <table class="display_title">
+      <tr>
+          <td class="website_title">Pokebase</td>
+          <td><img class="pokeball_img" src="/public/pokeball.png"></td>
       </tr>
+      <table class="login_table">
+        <tr>
+          <th colspan="3">
+            <span class="username_span">{{#username}}{{.}}{{/username}}</span>
+            {{#userId}}<a href="/home/{{.}}">Account</a>{{/userId}}
+          </th>
+        </tr>
+
+        <tr>
+          <td class="login_li"><a href="/home/registeruser">Register</a></td>
+          <td class="login_li"><a href="/home/userlogin">Login</a></td>
+          <td class="login_li"><a href="/home/userlogout">Logout</a></td>
+        </tr>
       </table>
-      <li class="website_title">Pokebase</li>
-      <ul class="username_display">
-        <li><span class="username_span">{{#username}}{{.}}{{/username}}</span></li>
-        <li>{{#userId}}<a href="/home/{{.}}">Account</a>{{/userId}}</li>
-      </ul>
+
+      </table>
+
     </div>
+
+    <table class="navbar">
+      <tr>
+        <td class="nav_elements"><a href="/home">Home</td>
+      </tr>
+    </table>
 
     <form action="/home/userlogin" method="POST">
       <input type='text' name="username" placeholder="Username">
